--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 <div class="flex flex-col justify-center w-[400px] h-[440px]">
                     <h2 class="font-bold text-[48px] font-ggSans text-[Noto Sans]  ">Where hanging out is easy</h2>
 
-                    <p class="text-[#23274A] mt-10 leading-9">Grab a seat in a voice channel when you’re free. 
+                    <p class="text-[#23274A] mt-10 leading-9 font-ggSans text-[Noto Sans] ">Grab a seat in a voice channel when you’re free. 
                         Friends in your server can see you’re around and instantly pop in to talk without having to call.
                     </p>
 
@@ -165,15 +165,30 @@
                 <div class="flex flex-col justify-center w-[400px] h-[440px]">
                     <h2 class="font-bold text-[48px] font-ggSans text-[Noto Sans]  ">From few to a fandom</h2>
 
-                    <p class="text-[#23274A] mt-12 leading-9">Get any community running with moderation tools and custom member access.
+                    <p class="text-[#23274A] mt-12 leading-9 font-ggSans text-[Noto Sans] " >Get any community running with moderation tools and custom member access.
                          Give members special powers, set up private channels, and more.</p>
 
                 </div>
             </div>
         </section>
             
-        
+        <!-- relaible teach section -->
+        <section class="relative w-full h-[1059px] bg-[#F6F6F6]">
+            <div class="w-[1260px] h-ful mx-auto flex flex-col pt-[120px] pr[40px] pb-[80px]">
+                <!-- content -->
+                <div class="mx-auto w-[980px] h-[127px]">
+                    <h1 class="text-center text-[40px] font-bold font-ABC Ginto Nord text-[Noto Sans] ">RELIABLE TECH FOR STAYING CLOSE</h1>
 
+                    <p class="mx-auto mt-[24px] ml-16 font-ggSans text-[Noto Sans] text-[18px] ">Low-latency voice and video feels like you’re in the same room. Wave hello over video, watch friends
+                         stream <span class="ml-36 leading-9 font-ggSans text-[Noto Sans] "> their games, or gather up and have a drawing session with screen share.</span>
+                    </p>
+                </div>
+
+
+                <!-- images -->
+                <img src="./images/section4Image.svg" alt="" class="mt-16">
+            </div>
+        </section>
 
 
 
